--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "https://github.com/Mubarrat/html-builder/issues"
   },
   "homepage": "https://github.com/Mubarrat/html-builder#readme",
-  "devDependencies": {
+  "dependencies": {
     "npm-run-all": "^4.1.5",
     "terser": "^5.26.0",
     "typescript": "^5.3.3"
