--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: build-artifacts
-          paths: |
+          path: |
             html.js
             html.min.js
 
