--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,20 +20,20 @@ jobs:
           path: ./build
 
   release:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: build
     steps:
-      - uses: actions/download-artifact@v3
-        with:
-          name: build-artifacts
+      - name: Checkout code
+        uses: actions/checkout@v3
       - name: Create release
-        uses: actions/create-release@v3
+        id: create_release
+        uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.sha }}
-          release_name: ${{ github.sha }}
-          body: "Release notes for ${{ github.sha }}"
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}
+          body: "Intital Release"
           draft: false
           prerelease: false
           #files: |
