--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -15,13 +15,13 @@ jobs:
         id: checkout
         uses: actions/checkout@v3
       - name: Install dependencies
-        id: install_dependencies
+        id: install-dependencies
         run: npm install
       - name: Build
         id: build
         run: npm run build
       - name: Upload artifact for releasing
-        id: upload_artifact
+        id: upload-artifact
         uses: actions/upload-artifact@v3
         with:
           name: build-artifacts
@@ -36,33 +36,30 @@ jobs:
         id: checkout
         uses: actions/checkout@v3
       - name: Download Artifact
-        id: download_artifact
+        id: download-artifact
         uses: actions/download-artifact@v3
         with:
           name: build-artifacts
       - name: Archive Release
-        id: archive_release
+        id: archive-release
         uses: thedoctor0/zip-release@master
         with:
           filename: release.zip
       - name: Create release
-        id: create_release
+        id: create-release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
-          body: Intital Release
-          draft: false
-          prerelease: false
+          tag_name: ${{ github.run_number }}
+          release_name: Release v${{ github.run_number }}
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ steps.create-release.outputs.upload_url }}
           asset_path: ./release.zip
           asset_name: release-v${{ github.run_number }}.zip
           asset_content_type: application/zip
