--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -44,20 +44,25 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: build-artifacts
+          path: ./dist
+      - name: Get NPM Version
+        id: package-version
+        uses: martinbeentjes/npm-get-version-action@v1.3.1
       - name: Archive Release
         id: archive-release
         uses: thedoctor0/zip-release@master
         with:
           filename: release.zip
-          exclusions: '*.git* /*node_modules/* .editorconfig'
+          directory: ./dist
+          #exclusions: '*.git* /*node_modules/* .editorconfig package-lock.json'
       - name: Create release
         id: create-release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.run_number }}
-          release_name: Release v${{ github.run_number }}
+          tag_name: ${{ steps.package-version.outputs.current-version}}
+          release_name: Release v${{ steps.package-version.outputs.current-version}}
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
@@ -66,5 +71,5 @@ jobs:
         with:
           upload_url: ${{ steps.create-release.outputs.upload_url }}
           asset_path: ./release.zip
-          asset_name: release-v${{ github.run_number }}.zip
+          asset_name: release-v${{ steps.package-version.outputs.current-version}}.zip
           asset_content_type: application/zip
