--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -70,6 +70,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create-release.outputs.upload_url }}
-          asset_path: ./release.zip
+          asset_path: ./dist/release.zip
           asset_name: release-v${{ steps.package-version.outputs.current-version}}.zip
           asset_content_type: application/zip
