--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "html-builder",
   "version": "1.0.0",
   "description": "This is a library that helps you to build HTML in your JavaScript or TypeScript files.",
-  "main": "./src/html.ts",
+  "private": true,
   "scripts": {
-    "build": "npm-run-all build:js build:min",
-    "build:js": "tsc",
-    "build:min": "terser ./build/html.js -o ./build/html.min.js"
+    "_build": "npm run build:js && npm run build:min && npm run add-comments && npm run add-comments-min",
+    "_build:js": "tsc",
+    "_build:min": "terser ./build/html.js -o ./build/html.min.js",
+    "build": "webpack && replace-in-file \"var __webpack_exports__ = {};\" \"\" ./build/html.js && terser ./build/html.js -o ./build/html.min.js -c --comments=false"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,15 @@
     "url": "https://github.com/Mubarrat/html-builder/issues"
   },
   "homepage": "https://github.com/Mubarrat/html-builder#readme",
-  "dependencies": {
-    "npm-run-all": "^4.1.5",
-    "terser": "^5.26.0",
+  "devDependencies": {
+    "terser-webpack-plugin": "^5.3.9",
+    "ts-loader": "^9.5.1",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "replace-in-file": "^7.0.2",
+    "terser": "^5.26.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
