--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
-    "target": "es2015",
+    "target": "es6",
     "outFile": "./build/html.js",
     "sourceMap": true,
-    "sourceRoot": "./src/"
+    "sourceRoot": "./src/",
+    "removeComments": true
   },
   "include": ["./src/*"]
 }
