--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@mubarrathasan/html-builder",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "This is a library that helps you to build HTML in your JavaScript or TypeScript files.",
   "scripts": {
-    "build": "webpack && replace-in-file \"var __webpack_exports__ = {};\" \"\" ./build/html.js && terser ./build/html.js -o ./build/html.min.js -c --comments=true"
+    "build": "npm run build:js && npm run build:min",
+    "build:js": "tsc",
+    "build:min": "terser ./build/html.js -o ./build/html.min.js"
   },
-  "main": "webpack.config.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Mubarrat/html-builder.git"
@@ -17,15 +18,11 @@
   },
   "homepage": "https://github.com/Mubarrat/html-builder#readme",
   "devDependencies": {
-    "terser-webpack-plugin": "^5.3.9",
-    "ts-loader": "^9.5.1",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "replace-in-file": "^7.0.2",
-    "terser": "^5.26.0",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "terser": "^5.26.0"
   },
   "publishConfig": {
     "@mubarrathasan:registry": "https://npm.pkg.github.com"
