--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,10 +1,6 @@
 name: Build and Release
 
-on:
-  push:
-    branches: [ main ]
-    tags:
-      - 'v*'
+on: workflow_dispatch
 
 jobs:
   build-project:
