--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "outFile": "./build/html.js",
+    "outFile": "./dist/html.js",
     "sourceRoot": "./src/",
     "removeComments": true,
     "inlineSources": true,
