--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@mubarrathasan/html-builder",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "This is a library that helps you to build HTML in your JavaScript or TypeScript files.",
   "scripts": {
-    "build": "tsc && terser ./dist/html.js --comments all -o ./dist/html.min.js"
+    "build": "tsc && node prependComment.js && terser ./dist/html.js --comments all -o ./dist/html.min.js"
   },
   "repository": {
     "type": "git",
