--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,9 @@
     "removeComments": true,
     "inlineSources": true,
     "sourceMap": true,
-    "strict": true
+    "strict": true,
+    "esModuleInterop": true
   },
-  "include": ["./src/*"]
+  "include": ["./src/*"],
+  "exclude": ["node_modules"]
 }
