--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -12,6 +12,7 @@ jobs:
           node-version: 16
       - run: npm install
       - run: npm run build
+      - run: npm ci
 
   publish-gpr:
     needs: build
@@ -25,6 +26,8 @@ jobs:
         with:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
+      - run: npm install
+      - run: npm run build
       - run: npm ci
       - run: npm publish
         env:
