--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -3,19 +3,7 @@ name: Node.js Package
 on: workflow_dispatch
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - run: npm install
-      - run: npm run build
-      - run: npm ci
-
-  publish-gpr:
-    needs: build
+  publish:
     runs-on: ubuntu-latest
     permissions:
       packages: write
@@ -29,6 +17,6 @@ jobs:
       - run: npm install
       - run: npm run build
       - run: npm ci
-      - run: npm publish
+      - run: npm publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
