--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "terser": "^5.26.0"
   },
   "publishConfig": {
-    "@mubarrathasan:registry": "https://npm.pkg.github.com"
+    "@mubarrathasan:registry": "https://registry.npmjs.org/"
   }
 }
